[tool.poetry]
name = "random-filters"
version = "1.5.5"
description = "A package for generating random filters"
authors = ["Renan <renancavalcantercb@protonmail.com>"]
readme = "README.md"
packages = [{ include = "random_filters", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.0"
random = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
